feat: ending configuring the swagger
